# Reflection-Cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Reflect.h  compile_string.h  function_field.h  variable_field.h
pch/: Pch.h
src/: Main.cpp  Reflect.cpp  main.cpp
